--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,25 @@
-certifi==2021.10.8
-click==8.1.3
-et-xmlfile==1.1.0
-Flask==2.1.2
-Flask-WTF==1.0.1
-importlib-metadata==4.11.3
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.1
-numpy==1.22.3
-openpyxl==3.0.9
-pandas==1.4.2
-python-dateutil==2.8.2
-pytz==2022.1
-six==1.16.0
-Werkzeug==2.1.2
-WTForms==3.0.1
-XlsxWriter==3.0.3
-zipp==3.8.0
+Package            Version
+------------------ ---------
+certifi            2021.10.8
+click              8.1.3
+et-xmlfile         1.1.0
+Flask              2.1.2
+Flask-WTF          1.0.1
+gunicorn           20.1.0
+importlib-metadata 4.11.3
+itsdangerous       2.1.2
+Jinja2             3.1.2
+MarkupSafe         2.1.1
+numpy              1.22.3
+openpyxl           3.0.9
+pandas             1.4.2
+pip                21.2.4
+python-dateutil    2.8.2
+pytz               2022.1
+setuptools         61.2.0
+six                1.16.0
+Werkzeug           2.1.2
+wheel              0.37.1
+WTForms            3.0.1
+XlsxWriter         3.0.3
+zipp               3.8.0
