--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ click              8.1.3
 et-xmlfile         1.1.0
 Flask              2.1.2
 Flask-WTF          1.0.1
-gunicorn           20.1.0
+gunicorn           
 importlib-metadata 4.11.3
 itsdangerous       2.1.2
 Jinja2             3.1.2
