--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
-Package            Version
------------------- ---------
 certifi            2021.10.8
 click              8.1.3
 et-xmlfile         1.1.0
 Flask              2.1.2
 Flask-WTF          1.0.1
-gunicorn           
+gunicorn           20.1.0
 importlib-metadata 4.11.3
 itsdangerous       2.1.2
 Jinja2             3.1.2
